# website

./: .gitignore  404.html  Makefile  README.md  bun.lockb  dprint.json  go.mod  index.html  main.go  main.js  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
app/: globals.css
app/index/: index.css  index.html  index.js
app/message/: message.html
backend/: .env.example  .gitignore  Cargo.toml
backend/src/: database.rs  main.rs  models.rs  routes.rs
backend/src/api/delete/: blog_posts.rs  comment.rs  mod.rs
backend/src/api/get/: blog_posts.rs  comments.rs  health.rs  mod.rs
backend/src/api/post/: blog_posts.rs  comment.rs  mod.rs
css/: animations.css  main.css  media.css
endpoint/: forum.go  index.go  message.go  playlist.go
frontend/: .env.example  bun.lockb  next.config.mjs  package.json  tsconfig.json
frontend/src/: next-auth-extensions.d.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/posts/: page.tsx
frontend/src/app/support/: page.tsx
frontend/src/interfaces/: comment.ts  post.ts
frontend/src/lib/: auth.ts  index.ts  posts.ts
posts/: motorcycles.mdx  revamp.mdx
src/app/: constants.ts  globals.css  layout.tsx  page.tsx
src/app/posts/: page.tsx
src/components/: footer.tsx
src/components/cards/: projectCard.tsx  skillCard.tsx
src/interfaces/: post.ts
src/lib/: mdx.ts
src/pages/blog/: index.tsx
src/pages/projects/: cctvdiscordbot.tsx  hanamibot.tsx  lemmykarmacalculator.tsx
src/types/: index.ts
utils/: error.go  mediaRedirector.go  port.go  request.go  serveHtml.go
(+9 files in other folders)
